cmake_minimum_required(VERSION 3.17)
project(CPlusPlus_Tutorial)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        CPlusPlus_Tutorial
        main.cpp
        Tutorial/T1.cpp
        Tutorial/T1.h
        Tutorial/T2.cpp
        Tutorial/T2.h
        Lecture/L2.cpp
        Lecture/L2.h
        Tutorial/T2.cpp
        Tutorial/T2.h
        Tutorial/T3.cpp
        Tutorial/T3.h
        Lecture/L3.cpp
        Lecture/L3.h
        Tutorial/T4.cpp
        Tutorial/T4.h
        Lecture/L4.cpp
        Lecture/L4.h
        Tutorial/T5.cpp
        Tutorial/T5.h
        Lecture/L5.cpp
        Lecture/L5.h
        Lecture/L5/Polynomial.cpp
        Lecture/L5/Polynomial.h
        Tutorial/T6/Q1.cpp
        Tutorial/T6/Q1.h
        Tutorial/T6/CashRegister.cpp
        Tutorial/T6/CashRegister.h
        Tutorial/T6/Population.cpp
        Tutorial/T6/Population.h
        Lecture/L6.cpp
        Lecture/L6.h
        Lecture/L6_2.cpp
        Lecture/L6_2.h
)